# aura

./: .gitignore  Cargo.toml  README.md
benches/: bench_common.rs  bench_large.rs  election.rs  election_n1024.rs  election_n1048576.rs  election_n16.rs  election_n16384.rs  election_n256.rs  election_n262144.rs  election_n4096.rs  election_n64.rs  election_n65536.rs  proof_primitives.rs  proof_primitives_lib.rs  proof_sizes.rs  proofs.rs
src/: errors.rs  generators.rs  lib.rs  signature.rs  transcript.rs  types.rs
src/dkg/: mod.rs  polynomial.rs  protocol.rs
src/election/: ballot.rs  bulletin.rs  mod.rs  params.rs  setup.rs  tally.rs
src/elgamal/: decrypt.rs  encrypt.rs  keys.rs  mod.rs
src/proofs/: bit_vector.rs  commitment_set.rs  dleq.rs  encryption_validity.rs  mod.rs  representation.rs  serial_validity.rs
src/proofs/lib_backed/: bit_vector.rs  bridge.rs  commitment_set.rs  dleq.rs  encryption_validity.rs  mod.rs  representation.rs  serial_validity.rs
tests/: full_election.rs
thesis/: README.md  build_paper.sh  convert_criterion_svgs.sh  extract.py  make_plots.py  make_tables.py  paper.tex  run_benches.sh
thesis/results/: deps.txt  env.txt  env_laptop.txt  sizes.csv  timings.csv
thesis/results/criterion/N1024_ballot/create/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N1024_ballot/verify/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N1024_dkg/2of3/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N1024_tally/full_pipeline/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N1024_tally/serial_decrypt_per_tallier/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N1024_verify_batch/1/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N1024_verify_batch/10/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N1024_verify_batch/100/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N1024_verify_batch/50/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N1024_voter/registration/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_ballot/create/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_ballot/verify/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_dkg/2of3/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_tally/full_pipeline/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_tally/serial_decrypt_per_tallier/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_verify_batch/1/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_verify_batch/10/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_verify_batch/100/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_verify_batch/50/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16384_voter/registration/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16_ballot/create/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16_ballot/verify/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16_dkg/2of3/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16_tally/full_pipeline/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16_tally/serial_decrypt_per_tallier/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16_verify_batch/1/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16_verify_batch/10/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N16_voter/registration/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_ballot/create/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_ballot/verify/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_dkg/2of3/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_tally/full_pipeline/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_tally/serial_decrypt_per_tallier/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_verify_batch/1/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_verify_batch/10/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_verify_batch/100/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_verify_batch/50/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/N256_voter/registration/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/criterion/_size_report_noop/new/: benchmark.json  estimates.json  sample.json  tukey.json
thesis/results/tables/: g1_proof_primitives.md  g1_proof_primitives.tex  g2_proof_sizes.md  g2_proof_sizes.tex  g3_batch_amortization.md  g3_batch_amortization.tex  g3b_election_batch_verify.md  g3b_election_batch_verify.tex  g4_election_lifecycle.md  g4_election_lifecycle.tex  g5_handrolled_vs_lib.md  g5_handrolled_vs_lib.tex  g6_tally_breakdown.md  g6_tally_breakdown.tex
(+728 files in other folders)
