[package]
name = "aura"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "Implementation of the Aura private voting protocol"

[dependencies]
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "precomputed-tables", "rand_core", "zeroize"] }
merlin = { version = "3.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand = { version = "0.8", optional = true }
snafu = { version = "0.8", default-features = false }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }
itertools = { version = "0.13", default-features = false, features = ["use_alloc"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"
proptest = "1.4"

[features]
default = ["std", "rand"]
std = ["snafu/std", "rand_core/std"]
rand = ["dep:rand", "curve25519-dalek/rand_core"]
serde = ["dep:serde", "dep:bincode", "curve25519-dalek/serde"]

[[bench]]
name = "proof_primitives"
harness = false
required-features = ["rand"]

[[bench]]
name = "election_n16"
harness = false
required-features = ["rand"]

[[bench]]
name = "election_n64"
harness = false
required-features = ["rand"]

[[bench]]
name = "election_n256"
harness = false
required-features = ["rand"]

[[bench]]
name = "election_n1024"
harness = false
required-features = ["rand"]

[[bench]]
name = "election_n4096"
harness = false
required-features = ["rand"]

[[bench]]
name = "election_n16384"
harness = false
required-features = ["rand"]

[[bench]]
name = "election_n65536"
harness = false
required-features = ["rand"]

[[bench]]
name = "election_n262144"
harness = false
required-features = ["rand"]

[[bench]]
name = "election_n1048576"
harness = false
required-features = ["rand"]

[[bench]]
name = "proof_sizes"
harness = false
required-features = ["rand"]
